# learning-loop-template

./: .env.example  .envrc  .gitattributes  .gitignore  .mcp.json  AGENTS.md  AGENTS.old.260612-1300.md  CLAUDE.md  HANDOFF.md  README.md  change-log.jsonl  file-index.jsonl  meta-state.jsonl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  runtime-state.jsonl  skills-lock.json  vitest.config.mjs
.claude/: .ckignore  settings.json
.factory/: hooks.json  mcp.json  settings.json
.loop/: r2-allowlist.json
.mastracode/: database.json  hooks.json  mcp.json  settings.json
docs/: architecture.md  artifact-concepts.md  artifact-reference.md  charter.md  claim-proof-lifecycle.md  claim-verification.md  handoff.md  knowledge-pack-contract.md  lab-model.md  loop-engine.md  mcp-server-restart-protocol.md  (+17 more)
product/api/: README.md  pyproject.toml  vnstock_env.py
product/api/capabilities/vnstock-data/: README.md  capability-00-discovery.py  capability-01-reference.py  capability-02-market.py  capability-03-fundamental.py  capability-04-insights-macro.py
product/api/scripts/: cleanup-sandbox.sh  install-vnstock.sh
product/api/src/: main.py
product/api/src/models/: fundamental.py  macro.py  reference.py
product/api/src/routers/: fundamental.py  macro_commodity.py  macro_currency.py  macro_economy.py  reference.py
product/api/src/vendor_compat/: __init__.py  vnstock_device_id.py
product/api/tests/: test-stale-container-guard.sh  test_fundamental.py  test_macro_commodity.py  test_macro_currency.py  test_macro_economy.py  test_reference.py  test_vci_smoke.py
(+3463 files in other folders)
