[project]
name = "learning-loop-product"
version = "0.1.0"
description = "Product runtime environment for learning-loop capability experiments."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pandas>=3.0.2",
  "pydantic>=2.11.0",
  "pytest>=8.0.0",
  "requests>=2.33.1",
  "uv>=0.11.12",
  "uvicorn>=0.34.0",
]

[tool.uv]
package = false
